support for newer ansible versions and ubuntu

--- a/templates/ipsec.conn.conf.j2
+++ b/templates/ipsec.conn.conf.j2
@@ -63,7 +63,7 @@ conn {{conn.name}}
 {% endmacro %}
 
 
-{% if inventory_hostname is inoreq  conn.left %}
+{% if inventory_hostname is inoreq (conn.left) %}
 {%   if 'tunnel' in conn and 'left' in conn.tunnel %}
 {%     set tnl = conn.tunnel.left %}
 {%   else %}
